--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05tut",
+  "name": "06tut",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -8,9 +8,11 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Express Tutorial",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
